--- a/sass old/components/Portfolio/_cards.scss
+++ b/sass old/components/Portfolio/_cards.scss
@@ -4,7 +4,7 @@
     margin-top: 50px;
 }
 
-.cards__item {
+/*.cards__item {
     margin-right: 30px;
     margin-bottom: 30px;
 
@@ -15,7 +15,7 @@
     &:nth-last-child(-n + 3) {
         margin-bottom: 0;
     }
-}
+}*/
 
 .cards__block {
     position: relative;
