--- a/sass/components/Portfolio/_cards.scss
+++ b/sass/components/Portfolio/_cards.scss
@@ -6,6 +6,28 @@
     margin-top: 30px;
 }
 
+/*@media screen and (min-width: 1200px) {
+    .cards__item {
+        margin-right: 30px;
+        margin-bottom: 30px;
+        
+        &:nth-child(3n) {
+            margin-right: 0;
+        }
+        
+        &:nth-last-child(-n + 3) {
+            margin-bottom: 0;
+        }
+    }
+}*/
+
+.cards__discription {
+    display: none;
+}
+
+.cards__discription {
+    position: relative;
+}
 
 .cards__link {
     display: block;
@@ -18,9 +40,42 @@
     }
 }
 
-.cards__discription {
-    display: none;
+.cards__block {
+    position: relative;
+    overflow: hidden;
 }
+
+@media screen and (min-width: 1200px) {
+    .cards__discription {
+        position: relative;
+        position: absolute;
+
+        display: block;
+        top: 0;
+        left: 0;
+        transform: translate(-50%, -50%);
+        background-color: rgba(33, 150, 243, 0.9);
+        width: 100%;
+        height: 100%;
+
+        font-size: 18px;
+        line-height: 1.56;
+        letter-spacing: 0.03em;
+        color: $color-light-title;
+
+        padding: 63px 24px;
+
+        transform: translateY(101%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        .cards__link:hover &,
+        .cards__link:focus & {
+            transform: translateY(0);
+        }
+    }
+}
+
+
 
 .cards__block {
     position: relative;
