--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,19 +2,31 @@
     background-color: $bg-color-main;
 }
 
+.team {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 30px;
+    gap: 30px;
+}
+
 @media screen and (min-width: 768px) {
     .team {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
+        justify-content: start;
         gap: 30px;
+        
     }
 }
+
+
 
 @media screen and (min-width: 1200px) {
     .team {
         display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
+        flex-wrap: nowrap;
     }
 }
 
@@ -23,12 +35,18 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    margin-top: 30px;
+}
 
+@media screen and (min-width: 768px) {
+    .team__item {
+        max-width: 354px;
+
+    }
 }
 
 .team__img {
     display: block;
+    max-width: 100%;
 }
 
 .team__box {
