--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,7 +17,9 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             .hero {
-                background-image: url('/images/mobile/bg@2x.jpg');
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)), url('/images/mobile/bg@2x.jpg');
             }
         }
 }
@@ -34,7 +36,9 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             .hero {
-                background-image: url('/images/tablet/bg@2x.jpg');
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)), url('/images/tablet/bg@2x.jpg');
             }
         }
 }
@@ -51,7 +55,9 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
         .hero {
-            background-image: url('/images/desktop/bg@2x.jpg');
+            background-image: linear-gradient(to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)), url('/images/desktop/bg@2x.jpg');
         }
     }
 }
