--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,6 @@ b {
   height: 100vh;
   background-color: #fff;
   padding: 48px 40px;
-  z-index: 99;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -249,15 +248,12 @@ b {
   letter-spacing: 0.02em;
   color: #212121;
 }
-.navigation__item:not(:last-child) {
-  margin-bottom: 32px;
-}
 
 @media screen and (min-width: 768px) {
   .navigation__item {
     position: relative;
     font-size: 14px;
-    margin-bottom: 32px;
+    margin-bottom: 0;
   }
   .navigation__item:not(:last-child) {
     margin-right: 50px;
@@ -270,6 +266,9 @@ b {
 }
 .navigation__link:hover, .navigation__link:focus {
   color: #2196f3;
+}
+.navigation__link:not(:last-child) {
+  padding-bottom: 32px;
 }
 
 @media screen and (min-width: 768px) {
