--- a/css/main.css
+++ b/css/main.css
@@ -541,26 +541,34 @@ b {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.advantages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+
 @media screen and (min-width: 768px) {
   .advantages {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    gap: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .advantages {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
-    gap: 30px;
   }
 }
+@media screen and (min-width: 768px) {
+  .advantages__item {
+    max-width: 354px;
+  }
+}
+.advantages__item {
+  max-width: 354px;
+}
+
 .advantages__title {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -601,10 +609,9 @@ b {
           justify-content: center;
 }
 
-.advantages__item:not(:last-child) {
-  margin-bottom: 30px;
-}
-
+/*.advantages__item:not(:last-child) {
+    margin-bottom: 30px;
+}*/
 .section__not-padding-top {
   display: none;
 }
@@ -804,9 +811,6 @@ b {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-top: 50px;
 }
 
@@ -1464,20 +1468,11 @@ b {
   margin-top: 30px;
 }
 
-/*@media screen and (min-width: 1200px) {
-    .cards__item {
-        margin-right: 30px;
-        margin-bottom: 30px;
-
-        &:nth-child(3n) {
-            margin-right: 0;
-        }
-
-        &:nth-last-child(-n + 3) {
-            margin-bottom: 0;
-        }
-    }
-}*/
+@media screen and (min-width: 768px) {
+  .cards__item {
+    max-width: 354px;
+  }
+}
 .cards__discription {
   display: none;
 }
