--- a/sass/components/Portfolio/_cards.scss
+++ b/sass/components/Portfolio/_cards.scss
@@ -6,20 +6,11 @@
     margin-top: 30px;
 }
 
-/*@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
     .cards__item {
-        margin-right: 30px;
-        margin-bottom: 30px;
-        
-        &:nth-child(3n) {
-            margin-right: 0;
-        }
-        
-        &:nth-last-child(-n + 3) {
-            margin-bottom: 0;
-        }
+        max-width: 354px;
     }
-}*/
+}
 
 .cards__discription {
     display: none;
