--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,18 +1,30 @@
+.advantages {
+    display: flex;
+    gap: 30px;
+}
+
+
+
 @media screen and (min-width: 768px) {
     .advantages {
-        display: flex;
         flex-wrap: wrap;
-        gap: 30px;
     }
 }
 
 
 @media screen and (min-width: 1200px) {
     .advantages {
-        display: flex;
         flex-wrap: nowrap;
-        gap: 30px;
     }
+}
+
+@media screen and (min-width: 768px) {
+    .advantages__item {
+        max-width: 354px;
+    }
+}
+.advantages__item {
+    max-width: 354px;
 }
 
 .advantages__title {
@@ -53,8 +65,8 @@
     justify-content: center;
 }
 
-.advantages__item:not(:last-child) {
+/*.advantages__item:not(:last-child) {
     margin-bottom: 30px;
-}
+}*/
 
 
