--- a/css/main.css
+++ b/css/main.css
@@ -545,6 +545,8 @@ b {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
 }
 
