--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,12 +1,12 @@
 .advantages {
-    display: flex;
     gap: 30px;
 }
 
 
 
 @media screen and (min-width: 768px) {
-    .advantages {
+    .advantages {\
+        display: flex;
         flex-wrap: wrap;
     }
 }
