--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,12 +1,18 @@
 .advantages {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 30px;
+
 }
 
 
 
 @media screen and (min-width: 768px) {
-    .advantages {\
+    .advantages {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
     }
 }
@@ -23,9 +29,7 @@
         max-width: 354px;
     }
 }
-.advantages__item {
-    max-width: 354px;
-}
+
 
 .advantages__title {
     font-family: $main-font;
