--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,6 +5,7 @@
 .team {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     margin-top: 30px;
     gap: 30px;
@@ -31,6 +32,7 @@
 }
 
 .team__item {
+    max-width: 450px;
     background: $color-light-title;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
