--- a/css/main.css
+++ b/css/main.css
@@ -12,22 +12,41 @@ body {
 }
 
 .container {
-  max-width: 1200px;
   padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 .section__title {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
 
+@media screen and (min-width: 1200px) {
+  .section__title {
+    font-size: 36px;
+  }
+}
 h1,
 h2,
 h3,
@@ -78,12 +97,23 @@ b {
   padding: 60px 0;
 }
 
+@media screen and (max-width: 767px) {
+  .section {
+    padding: 60px 0;
+  }
+}
 @media screen and (min-width: 768px) {
+  .section {
+    padding: 60px 0;
+  }
+}
+@media screen and (min-width: 1200px) {
   .section {
     padding: 94px 0;
   }
 }
 .header {
+  position: relative;
   background-color: #fff;
   min-height: 60px;
 }
@@ -91,6 +121,7 @@ b {
   border-bottom: 1px solid #ececec;
 }
 .header__container {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,6 +130,17 @@ b {
           align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    min-height: 80px;
+  }
+}
 .header__menu--conteiner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -110,6 +152,9 @@ b {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -166,7 +211,6 @@ b {
   background-color: transparent;
   position: absolute;
   right: 15px;
-  top: 10px;
   width: 40px;
   height: 40px;
   background-color: #fff;
@@ -211,13 +255,17 @@ b {
   font-size: 24px;
   line-height: 1.42;
   letter-spacing: 0.03em;
-  margin: 16px 15px;
   color: #2196f3;
 }
 .logo__black {
   color: #000;
 }
 
+@media screen and (max-width: 767px) {
+  .logo {
+    margin-right: 0;
+  }
+}
 @media screen and (min-width: 768px) {
   .logo {
     margin-right: 88px;
@@ -271,6 +319,11 @@ b {
   padding-bottom: 32px;
 }
 
+@media screen and (max-width: 767px) {
+  .navigation__link--current {
+    color: #2196f3;
+  }
+}
 @media screen and (min-width: 768px) {
   .navigation__link {
     padding-top: 32px;
@@ -292,6 +345,15 @@ b {
 }
 @media screen and (min-width: 768px) {
   .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-left: auto;
   }
 }
@@ -308,13 +370,16 @@ b {
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: 21px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -326,13 +391,12 @@ b {
     -webkit-box-direction: reverse;
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-top: 32px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 .contacts__icon {
@@ -353,23 +417,19 @@ b {
   color: #757575;
   fill: #757575;
 }
-.contacts__item:not(:last-child) {
-  margin-bottom: 32px;
-}
 
 @media screen and (min-width: 768px) {
-  .contacts__item {
-    font-size: 12px;
+  .contacts__item:not(:first-child) {
     margin-bottom: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts__item {
     font-size: 14px;
-    margin-bottom: 32px;
   }
   .contacts__item:not(:first-child) {
     margin-right: 30px;
+    margin-bottom: 0;
   }
 }
 .contacts__link {
@@ -386,18 +446,18 @@ b {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    font-size: 12px;
+    line-height: 1.16;
   }
 }
-.contacts__link-color {
-  color: #2196f3;
-  font-size: 34px;
-  line-height: 1.18;
+@media screen and (max-width: 767px) {
+  .contacts__link-color {
+    color: #2196f3;
+    font-size: 34px;
+    line-height: 1.18;
+  }
 }
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
   .contacts__link-color {
     color: #757575;
     font-size: 12px;
@@ -441,48 +501,52 @@ b {
   margin-left: 10px;
 }
 
-.hero {
-  background-color: #2f303a;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/mobile/bg.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/mobile/bg.jpg");
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 1600px;
-  margin-right: auto;
-  margin-left: auto;
-}
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .hero .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/mobile/bg@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/mobile/bg@2x.jpg");
+@media screen and (max-width: 767px) {
+  .hero {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1600px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/mobile/bg.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile/bg.jpg");
   }
 }
-
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/mobile/bg@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile/bg@2x.jpg");
+  }
+}
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/tablet/bg.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/tablet/bg.jpg");
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/tablet/bg.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet/bg.jpg");
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/tablet/bg@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/tablet/bg@2x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/tablet/bg@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet/bg@2x.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/desktop/bg.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/desktop/bg.jpg");
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/desktop/bg.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop/bg.jpg");
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/desktop/bg@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/desktop/bg@2x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/desktop/bg@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop/bg@2x.jpg");
   }
 }
 .hero__title {
@@ -549,9 +613,6 @@ b {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -825,12 +886,6 @@ b {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-top: 50px;
 }
 
@@ -851,7 +906,6 @@ b {
       -ms-flex-pack: center;
           justify-content: center;
   height: 92px;
-  width: 170px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: #afb1b8;
@@ -869,37 +923,51 @@ b {
   margin: 0;
 }
 
-.footer__column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media screen and (max-width: 767px) {
+  .footer__column {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
-.footer__column:not(:last-child) {
-  margin-bottom: 60px;
-}
-
 @media screen and (min-width: 768px) {
+  .footer__column {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1200px) {
   .footer__column {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-bottom: 0;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 .footer__title {
@@ -952,6 +1020,7 @@ b {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -968,13 +1037,11 @@ b {
   color: #fff;
   margin-top: 20px;
   text-align: center;
-  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
   .address {
     text-align: start;
-    margin-bottom: 0;
   }
 }
 .address__item:not(:last-child) {
@@ -1005,6 +1072,12 @@ b {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .subscribe__link {
@@ -1038,19 +1111,10 @@ b {
   margin-right: 10px;
 }
 
-@media screen and (min-width: 768px) {
-  .subscribe {
-    margin-left: 165px;
-    /*margin-top: -40px;*/
-    margin-right: 93px;
-  }
+.footer__form {
+  margin-bottom: 60px;
 }
-@media screen and (min-width: 1200px) {
-  .subscribe {
-    margin-left: 70px;
-    margin-right: 93px;
-  }
-}
+
 .form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1096,9 +1160,26 @@ b {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   padding: 15px;
-  min-width: 358px;
 }
 
+@media screen and (max-width: 767px) {
+  .form__email {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .form__email {
+    max-width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .form__email {
+    max-width: 358px;
+  }
+}
 .form-label {
   margin-bottom: 20px;
 }
@@ -1242,8 +1323,6 @@ b {
   border-radius: 4px;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-box-sizing: #2196f3;
-          box-sizing: #2196f3;
   outline: transparent;
 }
 .field__input:focus {
@@ -1438,19 +1517,25 @@ b {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
+}
+.filter__item {
+  margin-bottom: 15px;
 }
 .filter__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.filter__item {
-  margin-bottom: 15px;
+@media screen and (max-width: 767px) {
+  .filter__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
 }
-
+@media screen and (min-width: 768px) {
+  .filter__item {
+    margin-bottom: 0;
+  }
+}
 .filter__button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -1482,27 +1567,33 @@ b {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
+@media screen and (min-width: 768px) {
+  .cards {
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards {
+    margin-top: 50px;
+  }
+}
 @media screen and (min-width: 768px) {
   .cards__item {
     max-width: 354px;
   }
 }
-.cards__discription {
-  display: none;
-}
-
-.cards__discription {
-  position: relative;
-}
-
 .cards__link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1518,35 +1609,34 @@ b {
   overflow: hidden;
 }
 
-@media screen and (min-width: 1200px) {
-  .cards__discription {
-    position: relative;
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    background-color: rgba(33, 150, 243, 0.9);
-    width: 100%;
-    height: 100%;
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-    color: #fff;
-    padding: 63px 24px;
-    -webkit-transform: translateY(101%);
-            transform: translateY(101%);
-    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .cards__link:hover .cards__discription, .cards__link:focus .cards__discription {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
+.cards__discription {
+  position: relative;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: rgba(33, 150, 243, 0.9);
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #fff;
+  padding: 63px 24px;
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.cards__link:hover .cards__discription, .cards__link:focus .cards__discription {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 .cards__block {
   position: relative;
   overflow: hidden;
@@ -1571,6 +1661,9 @@ b {
 }
 
 .cards__tumb {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
