--- a/sass/components/Footer/_address.scss
+++ b/sass/components/Footer/_address.scss
@@ -2,6 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+    .footer__address {
+        margin-bottom: 0;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -19,13 +26,11 @@
     color: $color-light-title;
     margin-top: 20px;
     text-align: center;
-    margin-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
     .address {
         text-align: start;
-        margin-bottom: 0;
     }
 }
 
