--- a/sass/components/Footer/_general-footer.scss
+++ b/sass/components/Footer/_general-footer.scss
@@ -2,27 +2,35 @@
     background-color: $dark-background;
     padding: 60px 0;
     margin: 0;
-
-    
 }
 
-.footer__column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 
-    &:not(:last-child) {
-        margin-bottom: 60px;
+@media screen and (max-width: 767px) {
+    .footer__column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 
+
 @media screen and (min-width: 768px) {
     .footer__column{
-        flex-direction: row;
+        display: flex;
         flex-wrap: wrap;
-        margin-bottom: 0;
         align-items: baseline;
+        justify-content: space-around;
+        
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .footer__column {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: baseline;
+        justify-content: space-between;
     }
 }
 
