--- a/sass/components/Footer/_social-footer.scss
+++ b/sass/components/Footer/_social-footer.scss
@@ -3,9 +3,16 @@
 }
 
 
+@media screen and (min-width: 768px) {
+    .subscribe {
+        margin-bottom: 0;
+    }
+}
 
 .subscribe__list {
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .subscribe__link {
@@ -31,19 +38,4 @@
 
 .subscribe__item:not(:last-child) {
     margin-right: 10px;
-}
-
-@media screen and (min-width: 768px) {
-    .subscribe {
-        margin-left: 165px;
-        /*margin-top: -40px;*/
-        margin-right: 93px;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .subscribe {
-        margin-left: 70px;
-        margin-right: 93px;
-    }
 }
