--- a/sass/components/Header/_header-page.scss
+++ b/sass/components/Header/_header-page.scss
@@ -1,21 +1,38 @@
 .header {
+    position: relative;
     background-color: $color-light-title;
     min-height: 60px;
 
     &__border {
+        display: flex;
+        align-items: center;
         border-bottom: 1px solid #ececec;
     }
 
     &__container {
-        display: flex;
-        align-items: center;
+        position: relative;
+        
     }
 }
+@media screen and (max-width: 768px) {
+    .header {
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .header {
+        min-height: 80px;
+    }
+}
+
 
 .header__menu--conteiner {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
@@ -57,7 +74,6 @@
 
     position: absolute;
     right: 15px;
-    top: 10px;
     width: 40px;
     height: 40px;
     background-color: $light-background;
