--- a/sass/components/Header/_logo.scss
+++ b/sass/components/Header/_logo.scss
@@ -4,12 +4,17 @@
     font-size: 24px;
     line-height: 1.42;
     letter-spacing: 0.03em;
-    margin: 16px 15px;
 
     color: $accent-color;
 
     &__black {
         color: $color-logo-dark;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .logo {
+        margin-right: 0;
     }
 }
 
