--- a/sass/components/Header/_navigation.scss
+++ b/sass/components/Header/_navigation.scss
@@ -45,6 +45,12 @@
     
 }
 
+@media screen and (max-width: 767px) {
+    .navigation__link--current {
+        color: $accent-color;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .navigation__link {
         padding-top: 32px;
