--- a/sass/components/Portfolio/_cards.scss
+++ b/sass/components/Portfolio/_cards.scss
@@ -2,8 +2,19 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    align-items: center;
-    margin-top: 30px;
+    margin-top: 40px;
+}
+
+@media screen and (min-width: 768px) {
+    .cards {
+        margin-top: 30px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .cards {
+        margin-top: 50px;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -12,16 +23,10 @@
     }
 }
 
-.cards__discription {
-    display: none;
-}
-
-.cards__discription {
-    position: relative;
-}
-
 .cards__link {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
@@ -36,37 +41,33 @@
     overflow: hidden;
 }
 
-@media screen and (min-width: 1200px) {
-    .cards__discription {
-        position: relative;
-        position: absolute;
+.cards__discription {
+    position: relative;
+    position: absolute;
 
-        display: block;
-        top: 0;
-        left: 0;
-        transform: translate(-50%, -50%);
-        background-color: rgba(33, 150, 243, 0.9);
-        width: 100%;
-        height: 100%;
+    display: block;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    background-color: rgba(33, 150, 243, 0.9);
+    width: 100%;
+    height: 100%;
 
-        font-size: 18px;
-        line-height: 1.56;
-        letter-spacing: 0.03em;
-        color: $color-light-title;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: $color-light-title;
 
-        padding: 63px 24px;
+    padding: 63px 24px;
 
-        transform: translateY(101%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(101%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        .cards__link:hover &,
-        .cards__link:focus & {
-            transform: translateY(0);
-        }
+    .cards__link:hover &,
+    .cards__link:focus & {
+        transform: translateY(0);
     }
 }
-
-
 
 .cards__block {
     position: relative;
@@ -93,6 +94,7 @@
 }
 
 .cards__tumb {
+    flex-grow: 1;
     padding: 20px 24px;
     border-left: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
