--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -13,21 +13,44 @@ body {
 }
 
 .container {
-    max-width: 1200px;
     padding: 0 15px;
     margin-left: auto;
     margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+    .container {
+        width: 510px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 798px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
+
 .section__title {
     font-family: $main-font;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
 
     color: $color-dark-subtitle;
+}
+
+@media screen and (min-width: 1200px) {
+    .section__title {
+        font-size: 36px;
+    }
 }
 
 h1,
@@ -80,7 +103,19 @@ b {
     padding: 60px 0;
 }
 
+@media screen and (max-width: 767px) {
+    .section {
+        padding: 60px 0;
+    }
+}
+
 @media screen and (min-width: 768px) {
+    .section {
+        padding: 60px 0;
+    }
+}
+
+@media screen and (min-width: 1200px) {
     .section {
         padding: 94px 0;
     }
